--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,61 @@
     width: 300px;
     background-image: url(../img/banner1.jpg);
 }
+/*mobile cadastro*/
+.cabecalho{
+    background-color: black;
+    height: 161px;
+}
+.topmobile{
+    background-color: black;
+}
+header a{
+    color: white;
+    background-color: black;
+    text-decoration: none;
+}
+header li{
+    list-style: none;
+    margin: 18px;
+}
+.topmobile h1{
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.inicio{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+.inicio2{
+    display: flex;
+    justify-content: center;
+
+}
+.banner2{
+    width: 100px;
+    height: 100px;
+}
+.botao{
+    color: white;
+    text-decoration: none;
+    padding: 20px 12px;
+    width: 15em;
+    height: 20px;
+    border-radius: 20px;
+    border: black;
+    box-shadow: 0px 6px 10px black;
+}
+.cadastroadm{
+    margin-top: 12em;
+    display: flex;
+}
+.cadastroadm h2{
+    font-size: 20px;
+    text-align: center;
+    background-color:white;
+    color: black;
+    width: 700px;
+    margin: 0 auto;
+}
