--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 .topmobile nav {
     display: flex;
     flex-direction: column;
+    
 }
 .infoevento {
     display: none;
@@ -18,4 +19,133 @@
     height: 300px;
     width: 300px;
     background-image: url(../img/banner1.jpg);
+}
+ul,li{
+    list-style: none;
+    
+}
+
+header {
+    width: 100%;
+    max-height: 160px;
+    background: #000;
+    height: 160px;
+    padding-top: 2em;
+}
+h1 {
+    color: rgb(126, 123, 123);
+    text-align: center;
+    font-weight: lighter;
+}
+.topmobile nav {
+    width: 100%;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+.topmobile a {
+    color: white;
+    padding: .5em 1em;
+}
+.topmobile li {
+    color: white;
+    padding: .5em 0em;
+}
+.topmobile ul {
+    display: flex;
+    margin: 0 auto;
+}
+a {
+    text-decoration: none;
+    list-style-type: none;
+}
+.Banner{
+    width: 100%;
+}
+.propaganda{
+    width: 190px;
+    border-radius: 50%;
+    height: 190px;
+    position: relative;
+    margin-left: 113px;
+    margin-top: 5%;
+}
+.Plano1 {
+    background-color: black;
+    color: white;
+}
+.texto{
+    margin:30px 30px
+}
+.associar{
+    background-color:#53a7fc;
+    color:white;
+    margin:60px;
+    border-radius: 30px;
+    padding-bottom: 15px;
+}
+.p{
+    font-family: 'Times New Roman', Times, serif;
+}
+h2,h3{
+    text-align: center;
+}
+.valor{
+    margin-left: 170px;
+}
+.banner{
+    background-image: url(img/bg.png);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.outra {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #157DEB;
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+    padding: 2em 0;
+}
+.outras li {
+    padding: .5em 0;
+}
+.outras li a, .outras h4 {
+    color: white;
+    font-size: .9em;
+    padding: .5em;
+}
+.outras h4 {
+    color: #000;
+}
+.sociais img {
+    width: 50px;
+    padding: 0 1em;
+}
+.sociais {
+    background-color: #157DEB;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0;
+}
+footer p {
+    padding: .5em;
+    text-align: center;
+    background: linear-gradient(#3D01FF, #157DEB);
 }
