--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     
 }
+
 .infoevento {
     display: none;
 }
@@ -36,6 +37,10 @@ h1 {
     color: rgb(126, 123, 123);
     text-align: center;
     font-weight: lighter;
+
+}
+.planost{
+    padding: 10px 30px;
 }
 .topmobile nav {
     width: 100%;
@@ -56,6 +61,7 @@ h1 {
     display: flex;
     margin: 0 auto;
 }
+
 a {
     text-decoration: none;
     list-style-type: none;
@@ -63,6 +69,7 @@ a {
 .Banner{
     width: 100%;
 }
+
 .propaganda{
     width: 190px;
     border-radius: 50%;
@@ -76,41 +83,32 @@ a {
     color: white;
 }
 .texto{
-    margin:30px 30px
+    align-items: center;
+    position: absolute;
+    margin-top: 50px;
+    padding-left: 130px;
+    
 }
 .associar{
     background-color:#53a7fc;
     color:white;
-    margin:60px;
+    margin:60px 120px;
     border-radius: 30px;
-    padding-bottom: 15px;
+    padding-bottom: 18px;
+    height:15px;
+    width: 140px;
 }
 .p{
     font-family: 'Times New Roman', Times, serif;
+    padding: 40px 25px
 }
 h2,h3{
     text-align: center;
 }
+
 .valor{
-    margin-left: 170px;
+    margin-left: 180px;
 }
-.banner{
-    background-image: url(img/bg.png);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .outra {
     height: 100%;
     width: 100%;
@@ -149,3 +147,88 @@ footer p {
     text-align: center;
     background: linear-gradient(#3D01FF, #157DEB);
 }
+
+/* Fim responsividade 425px */
+
+@media (min-width:426px){
+    .valor{
+        margin-left: 5px;
+    }
+    .associar{
+    }
+
+}
+
+@media (min-width:769px){
+    .texto{
+        padding:70px 290px;
+        color:gray;
+    }
+    .planost{
+        padding:0px 80px;
+        margin-bottom: 15px;
+        margin-top: 25px;
+    }
+    .banner{
+    width: 100%;
+    }
+    .noticia{
+        display: flex;
+    }
+    .valor{
+        margin-left: 45px;
+    }
+    .preco{
+        margin-top: 130px;
+        margin-left: 110px;
+    }
+    .parkour{
+        width: 100%;
+    }
+    .Plano1{
+        height: 530px;
+    }
+    .associar{
+        align-items: center;
+        margin-left: 300px;
+        padding: 15px 5px
+
+    }
+@media (min-width:1201px){
+    .propaganda{
+    width:250px;
+    }
+    .planost{
+    padding:0px 150px;
+    margin-bottom: 15px;
+    margin-top: 25px;
+    }
+    .noticia{
+      display: flex;
+    }
+    .valor ,.h3{
+        margin-top: 120px;
+    }
+    .Plano1{
+        height:600px;
+
+    }
+    h1{
+        margin-left: 225px;
+    }
+    .logo{
+        margin-left: 15px;
+    }
+    .topmobile{
+        display: flex;
+    }
+    .preco{
+        margin-left: 300px;
+    }
+    .a{
+        justify-content: space-evenly;
+        display: flex;
+    }
+    .associar{
+        margin-left:530px;
+    }
