--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,12 @@ header {
     width: 100%;
     max-height: 160px;
     background: #000;
-    height: 160px;
+    height: 140px;
     padding-top: 2em;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
 }
 h1 {
     color: white;
@@ -93,7 +95,7 @@ a {
     padding-bottom: .8em;
 }
 .descritivo {
-    width: 80%;
+    width: 100%;
     min-height: 150px;
     height: 100%;
     text-align: center;
@@ -239,6 +241,10 @@ footer p {
     display: none;
 }
 @media screen and (min-width:769px){
+    header{
+        position: sticky;
+        top: 0;
+        }
     .block {
         display: none;
     }
@@ -279,6 +285,10 @@ footer p {
 }
 
 @media screen and (min-width:1201px){
+    header{
+    position: sticky;
+    top: 0;
+    }
     .block {
         display: flex;
     }
