--- a/css/style.css
+++ b/css/style.css
@@ -245,9 +245,9 @@ h1 {
 a {
     text-decoration: none;
 }
-.bannersurfgi{
-    width: 100px;
-    height: 100px;
+.bannersurf{
+    width: 100%;
+    height: 250x;
 }
 main{
     width: 100%;
@@ -383,7 +383,7 @@ select{
     margin: 50px;
     width: 327px;
     position: relative;
-    top: 10px;
+    top: -48px;
     display: flex;
     flex-direction: column;
     height: 560px;
@@ -416,11 +416,12 @@ label{
     text-decoration: none;
     padding: 15px 12px;
     width: 15em;
-    margin: 25px;
+    height: 50px;
+    margin: 10px;
     left: 30px;
     height: 50px;
     border-radius: 20px;
-    background-color: whitegit ;
+    background-color: white ;
     border: black;
     box-shadow: 0px 6px 10px black;
 }
@@ -464,6 +465,30 @@ footer p {
 }
 /*versão em tablet*/
 @media screen and (min-width: 769px){
+    .bannersurf{
+        display: flex;
+    }
+    .bannersurf img{
+        width: 100%;
+    }
+    .bannerpratique{
+        display: flex;
+    }
+    .bannerpratique img{
+        width: 100%;
+        position: relative;
+        left: 100px;
+    }
+    .bannerpratique p{
+        position: relative;
+        right: 90px;
+        top: 150px;
+        font-size: 20px;
+        color: white;
+        background-color: rgba(27, 27, 27, 0.3) ;
+        width: 200px;
+        height: 40px;
+    }
     .form_adm{
         min-width: 600px;
         margin-top: auto;
@@ -480,4 +505,5 @@ footer p {
         position: relative;
         left: 200px;
     }
+    
 }
