--- a/css/style.css
+++ b/css/style.css
@@ -148,87 +148,102 @@ footer p {
     background: linear-gradient(#3D01FF, #157DEB);
 }
 
+
+/* parte nova */
+.box{width: 100%;}
+.container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.alinha{width: 70%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em; flex-direction: column;}
+.alinha div{text-align: center;}
+.container img{ width: 150px; height: 150px; border-radius: 50%;}
+.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.txtalinha a{
+    padding: 15px 30px;
+    background-color: #53a7fc;
+    border-radius: 15px;
+    margin-top: 2em;
+    color: white;}
+
 /* Fim responsividade 425px */
 
 @media (min-width:426px){
-    .valor{
-        margin-left: 5px;
+    
+    .banner{width: 100%;
+        height: 200px;
+        background-image: url(../img/bg.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center; padding: 0;}
+    .cor{
+        background-color: black;
+        color: white;
     }
-    .associar{
+    .box{
+        padding: 1em;
     }
-
 }
 
 @media (min-width:769px){
-    .texto{
-        padding:70px 290px;
-        color:gray;
-    }
-    .planost{
-        padding:0px 80px;
-        margin-bottom: 15px;
-        margin-top: 25px;
-    }
-    .banner{
-    width: 100%;
-    }
-    .noticia{
-        display: flex;
-    }
-    .valor{
-        margin-left: 45px;
-    }
-    .preco{
-        margin-top: 130px;
-        margin-left: 110px;
-    }
-    .parkour{
-        width: 100%;
-    }
-    .Plano1{
-        height: 530px;
-    }
-    .associar{
-        align-items: center;
-        margin-left: 300px;
-        padding: 15px 5px
+   
+ /* parte nova */
+.container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
 
-    }
+.alinha{width: 90%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row;}
+
+.alinha div{text-align: center;}
+
+.container img{ width: 200px; height: 200px; border-radius: 50%; padding:1em}
+
+.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+
+.txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;}
+.cor{
+    background-color: black;
+    color: white;
+}
+
+}
 @media (min-width:1201px){
-    .propaganda{
-    width:250px;
+    .topmobile {
+        height: 100px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
     }
-    .planost{
-    padding:0px 150px;
-    margin-bottom: 15px;
-    margin-top: 25px;
+    .topmobile nav {
+        flex-direction: row;
     }
-    .noticia{
-      display: flex;
+    header {
+        height: 100px;
+        padding: 0;
     }
-    .valor ,.h3{
-        margin-top: 120px;
-    }
-    .Plano1{
-        height:600px;
 
+
+    .Planos{padding: 1em; width: 100%; height: 200%; display: flex; align-items: center; justify-content: center; flex-direction: column; }
+    .Planos p{width: 50%;}
+    
+    .banner{width: 100%; height: 200px; background-image: url(../img/bg.png); background-repeat: no-repeat; background-position: center; background-size: cover; display: flex; justify-content: center; align-items: center; padding: 0;}
+    .texto{margin: 0;}
+    .box{
+        position: relative;
     }
-    h1{
-        margin-left: 225px;
+    .cor{
+        background-color: black;
+        color: white;
     }
-    .logo{
-        margin-left: 15px;
-    }
-    .topmobile{
-        display: flex;
-    }
-    .preco{
-        margin-left: 300px;
-    }
-    .a{
-        justify-content: space-evenly;
-        display: flex;
-    }
-    .associar{
-        margin-left:530px;
-    }
+
+    .container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; padding-left: 14em;}
+
+    .alinha{width: 60%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row; }
+    
+    .alinha div{text-align: center;  width: 100%;margin-top: 20px;}
+    
+    .container img{ position: absolute; top: 70px; left: 120px;}
+    
+    .txtalinha {width: 60%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: -10px;}
+    
+    .txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;} 
+
+}
