--- a/css/style.css
+++ b/css/style.css
@@ -529,3 +529,131 @@ header {
         justify-content: space-between;
     }
 }
+.Banner{
+    width: 100%;
+}
+
+.propaganda{
+    width: 190px;
+    border-radius: 50%;
+    height: 190px;
+    position: relative;
+    margin-left: 113px;
+    margin-top: 5%;
+}
+.Plano1 {
+    background-color: black;
+    color: white;
+}
+.texto{
+    align-items: center;
+    position: absolute;
+    margin-top: 50px;
+    padding-left: 130px;
+    
+}
+.associar{
+    background-color:#53a7fc;
+    color:white;
+    margin:60px 120px;
+    border-radius: 30px;
+    padding-bottom: 18px;
+    height:15px;
+    width: 140px;
+}
+.p{
+    font-family: 'Times New Roman', Times, serif;
+    padding: 40px 25px
+}
+h2,h3{
+    text-align: center;
+}
+
+.valor{
+    margin-left: 180px;
+}
+/* parte nova */
+.box{width: 100%;}
+.container{width: 80%;
+     margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.alinha{width: 70%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em; flex-direction: column;}
+.alinha div{text-align: center;}
+.container img{ width: 150px; height: 150px; border-radius: 50%;}
+.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.txtalinha a{
+    padding: 15px 30px;
+    background-color: #53a7fc;
+    border-radius: 15px;
+    margin-top: 2em;
+    color: white;}
+
+/* Fim responsividade 425px */
+
+@media screen and (min-width:426px){
+    
+    .banner{
+        width: 100%;
+        height: 200px;
+        background-image: url(../img/banner1.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center; padding: 0;}
+    .cor{
+        background-color: black;
+        color: white;
+    }
+    .box{
+        padding: 1em;
+    }
+}
+
+@media screen and (min-width:769px){
+   
+ /* parte nova */
+.container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+
+.alinha{width: 90%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row;}
+
+.alinha div{text-align: center;}
+
+.container img{ width: 200px; height: 200px; border-radius: 50%; padding:1em}
+
+.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+
+.txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;}
+.cor{
+    background-color: black;
+    color: white;
+}
+
+}
+@media screen and (min-width:1201px){
+    .Planos{padding: 1em; width: 100%; height: 200%; display: flex; align-items: center; justify-content: center; flex-direction: column; }
+    .Planos p{width: 50%;}
+    
+    .banner{width: 100%; height: 200px; background-image: url(../img/bg.png); background-repeat: no-repeat; background-position: center; background-size: cover; display: flex; justify-content: center; align-items: center; padding: 0;}
+    .texto{margin: 0;}
+    .box{
+        position: relative;
+    }
+    .cor{
+        background-color: black;
+        color: white;
+    }
+
+    .container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; padding-left: 14em;}
+
+    .alinha{width: 60%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row; }
+    
+    .alinha div{text-align: center;  width: 100%;margin-top: 20px;}
+    
+    .container img{ position: absolute; top: 70px; left: 120px;}
+    
+    .txtalinha {width: 60%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: -10px;}
+    
+    .txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;} 
+
+}
