--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,71 @@ label{
 header {
     z-index: 99;
 }
+/* PÁGINA DE PLANOS */
+img {
+    width: 100%;
+}
+.bannerplanos {
+    background-image: url(../img/bannerplanos.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+.bannerplanos h2 {
+    padding: .6em 1.5em;
+    background-color: rgba(27, 27, 27, .5);
+}
+.planos {
+    width: 90%;
+    text-align: center;
+    margin: 2em auto;
+}
+.cardplano, .cardplanob {
+    width: 100%;
+    height: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em 0;
+    background-color: #000;
+    color: white;
+    text-align: center;
+}
+.cardplanob {
+    color: #000;
+    background-color: #fff;
+}
+.cardplano div, .cardplanob div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.imgcardplano {
+    background-image: url(../img/cardplano.jpg);
+    border-radius: 100%;
+    width: 150px;
+    height: 150px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+.cardplano div p, .cardplanob div p {
+    padding: .4em 0;
+}
+.cardplano a, .cardplanob a {
+    width: 270px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #157DEB;
+    color: white;
+}
 @media screen and (min-width: 769px){
     .form_adm{
         min-width: 600px;
@@ -422,8 +487,42 @@ header {
         position: relative;
         left: 200px;
     }
-}
-@media screen and (min-width:769px){
+    .planos {
+        width: 100%;
+        height: 100%;
+        padding: 3em 0;
+        margin: 0;
+        background-color: black;
+        color: white;
+    }
+    .planos p {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+    .white {
+        display: flex;
+        background-color: white;
+        width: 100%;
+    }
+    .white p, .white h4 {
+        color: black;
+    }
+    .cardplano {
+        background-color: rgba(0, 0, 0, 0);
+        color: #000;
+    }
+    .black {
+        display: flex;
+        background-color: black;
+        width: 100%;
+    }
+    .black p, .black h4 {
+        color: white;
+    }
+    .cardplanob {
+        background-color: rgba(0, 0, 0, 0);
+        color: white;
+    }
     header{
         position: sticky;
         top: 0;
@@ -528,132 +627,53 @@ header {
     .outra {
         justify-content: space-between;
     }
-}
-.Banner{
-    width: 100%;
-}
-
-.propaganda{
-    width: 190px;
-    border-radius: 50%;
-    height: 190px;
-    position: relative;
-    margin-left: 113px;
-    margin-top: 5%;
-}
-.Plano1 {
-    background-color: black;
-    color: white;
-}
-.texto{
-    align-items: center;
-    position: absolute;
-    margin-top: 50px;
-    padding-left: 130px;
-    
-}
-.associar{
-    background-color:#53a7fc;
-    color:white;
-    margin:60px 120px;
-    border-radius: 30px;
-    padding-bottom: 18px;
-    height:15px;
-    width: 140px;
-}
-.p{
-    font-family: 'Times New Roman', Times, serif;
-    padding: 40px 25px
-}
-h2,h3{
-    text-align: center;
-}
-
-.valor{
-    margin-left: 180px;
-}
-/* parte nova */
-.box{width: 100%;}
-.container{width: 80%;
-     margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.alinha{width: 70%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em; flex-direction: column;}
-.alinha div{text-align: center;}
-.container img{ width: 150px; height: 150px; border-radius: 50%;}
-.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.txtalinha a{
-    padding: 15px 30px;
-    background-color: #53a7fc;
-    border-radius: 15px;
-    margin-top: 2em;
-    color: white;}
-
-/* Fim responsividade 425px */
-
-@media screen and (min-width:426px){
-    
-    .banner{
-        width: 100%;
-        height: 200px;
-        background-image: url(../img/banner1.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+    .white, .black {
         display: flex;
-        justify-content: center;
-        align-items: center; padding: 0;}
-    .cor{
+        flex-direction: column;
+    }
+    .white {
+        background: none;
+    }
+    .black {
+        background: none;
+    }
+    .cardplano {
         background-color: black;
+    }
+    .cardplanob {
+        background-color: white;
+    }
+    .cardplano p, .cardplano h4 {
         color: white;
+        width: 50%;
     }
-    .box{
-        padding: 1em;
+    .cardplanob p, .cardplanob h4 {
+        color: black;
+        width: 50%;
     }
-}
-
-@media screen and (min-width:769px){
-   
- /* parte nova */
-.container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: center; align-items: center;}
-
-.alinha{width: 90%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row;}
-
-.alinha div{text-align: center;}
-
-.container img{ width: 200px; height: 200px; border-radius: 50%; padding:1em}
-
-.txtalinha {width: 90%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center;}
-
-.txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;}
-.cor{
-    background-color: black;
-    color: white;
-}
-
-}
-@media screen and (min-width:1201px){
-    .Planos{padding: 1em; width: 100%; height: 200%; display: flex; align-items: center; justify-content: center; flex-direction: column; }
-    .Planos p{width: 50%;}
-    
-    .banner{width: 100%; height: 200px; background-image: url(../img/bg.png); background-repeat: no-repeat; background-position: center; background-size: cover; display: flex; justify-content: center; align-items: center; padding: 0;}
-    .texto{margin: 0;}
-    .box{
-        position: relative;
+    .cardplano h4, .cardplanob h4 {
+        font-size: 3em;
     }
-    .cor{
-        background-color: black;
-        color: white;
+    .cardplano p, .cardplanob p {
+        font-size: 1.1em;
     }
-
-    .container{width: 80%; margin: auto; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; padding-left: 14em;}
-
-    .alinha{width: 60%; display: flex; justify-content: space-evenly; align-items: center; margin-bottom: 1em;  flex-direction: row; }
-    
-    .alinha div{text-align: center;  width: 100%;margin-top: 20px;}
-    
-    .container img{ position: absolute; top: 70px; left: 120px;}
-    
-    .txtalinha {width: 60%; margin: 2em; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: -10px;}
-    
-    .txtalinha a{padding: 15px 30px; background-color: #53a7fc; border-radius: 15px; margin-top: 2em; color: white;} 
-
+    .planos {
+        background: none;
+        color: black;
+        width: 50%;
+        margin: 0 auto;
+    }
+    .imgcardplano {
+        width: 300px;
+        height: 300px;
+    }
+    .cardplano div, .cardplanob div  {
+        flex-direction: row;
+        margin: 0 auto;
+    }
+    .cardplano .textplano, .cardplanob .textplano {
+        height: 100%;
+        width: 60%;
+        flex-direction: column;
+    }
 }
