--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ footer p {
 .banner p {
     display: none;
 }
+/*mobile cadastro*/
 .bannersurf{
     width: 100%;
     height: 130px;
@@ -304,6 +305,7 @@ input{
     border-style: initial;
 }
 input [type="date"]{
+    display: flex;
     text-align: center;
 }
 ::selection{
@@ -320,17 +322,13 @@ label{
     margin: auto;
 }
 .esporte{
-    margin: 20px;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     width: 200px;
-    position: relative;
-    left:90px;
-    padding: 0 10px;
+    
 }
 .data{
-    margin: 20px;
+    text-align: center;
     display: flex;
     flex-direction: column;
     font-size: unset;
@@ -339,13 +337,19 @@ label{
     display: flex;
     padding: 5px;
 }
-.botao_cadastro{
-    display: flex;
-    position: relative;
-    top: 100px;
-    right: 135px;
+.botao_cadastroadm{
+    color: black;
+    background-color: white;
+    text-decoration: none;
+    padding: 15px 12px;
+    margin: auto;
+    width: 15em;
+    height: 50px;
+    border-radius: 20px;
+    box-shadow: 0px 6px 10px gray;
 }
-.botao_cadastro{
+   
+.botao_cadastroevento{
     color: black;
     background-color: white;
     text-decoration: none;
@@ -359,14 +363,12 @@ label{
 .form_event{
     margin: 50px;
     width: 327px;
-    position: relative;
-    top: 10px;
     display: flex;
     flex-direction: column;
     height: 560px;
     padding: 25px;
     align-items: center;
-    margin: auto;
+    margin: 20px;
     background-color: #84ADFF;
 
 }
@@ -375,18 +377,12 @@ label{
     flex-direction: column;
     align-items: center;
     margin: 15px;
-}
-.evento .botao_cadastro{
-    margin: auto;
-    position: relative;
-    top: -15px;
-    right: 10px;
-}
+}    
+
 label{
     color: black  gray;
-    position: relative;
-    right: 80px;
-    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 .botao_evento{
     color: black;
@@ -675,5 +671,8 @@ img {
         height: 100%;
         width: 60%;
         flex-direction: column;
+    }
+    .form_adm{
+        width: 200px;
     }
 }
