--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ img {
         flex-direction: column;
     }
     .bannersurf{
-        width: 1202px;
+        width: 100%;
         height: 200px;
     }
     .form_adm{
